--- a/aula(17-04-2025).md
+++ b/aula(17-04-2025).md
@@ -16,10 +16,7 @@ Para detectar esse momento exato, utiliza-se um **detector de borda**, que **ger
 
 ### **🔍Entendendo visualmente…**
 
-[](https://lh7-rt.googleusercontent.com/docsz/AD_4nXemvOTO8hXICXpcPLR3O0u2F5Re7-9iRlukEQQkx83SLiKn5mWnAhAQJLpEUdw5PcywqyqsbfvQgr33gpEC--0KulMn8i_BCcjYS6fNyRBVGlXFuh-1GnEDedMA8ZwpD5fgiiZB4w?key=GySzsyc5JnuQyCBcnklOxVfl)
-
-[](https://lh7-rt.googleusercontent.com/docsz/AD_4nXd5PPEtFjL20bfvZGLrSBdgZGp1GAdzfyORxYfs18fP_20pR-Dn-x8nlOSCc47Nfn19KE8vUB4yxlWW-eTC2SBC3tx23zCoaJU58A6LSrVkdyEtzvNsWxiLJegJG03ytu_ouIlF?key=GySzsyc5JnuQyCBcnklOxVfl)
-
+![Detector de Borda](image.png)
 ---
 
 ## **✅ Vantagens da detecção por borda:**
