--- a/aula(17-04-2025).md
+++ b/aula(17-04-2025).md
@@ -1,4 +1,4 @@
-# **Aula 3 – Detector de Borda ( 17/04 )**
+# **Aula ( 17/04 ) – Detector de Borda**
 
 ## **🧠 Por que flip-flops são sensíveis à borda?**
 
